# agentes_ia_soft

./: .coverage  .env  README.md  SPEC.md  main.py  pyproject.toml
config/: agents_config.yaml  settings.yaml
data/requirements_vectordb/: chroma.sqlite3
scripts/: fix_test_function_colons.py  patch_type_annotations.py
src/: SDLAS_RequirementsAgent_Prompts_Package.md  __init__.py  persistence.py
src/agents/: __init__.py
src/agents/base/: __init__.py  agent_protocol.py  base_agent.py  decision_engine.py
src/agents/code/: __init__.py  code_backend_agent.py  code_frontend_agent.py
src/agents/deploy/: __init__.py  deploy_agent.py
src/agents/design/: __init__.py  design_agent.py
src/agents/maintenance/: __init__.py  maintenance_agent.py
src/agents/requirements/: __init__.py  auto_refinement_init.py  auto_refinement_models.py  auto_refinement_procedure_refinement_engine.py  procedure_refinement_engine.py  requirements_agent.py  requirements_agent_v2.py  requirements_agent_v2_assumptions.py  (+6 more)
src/core/: __init__.py  coordinator.py  event_bus.py  message_broker.py  metrics.py
src/utils/: __init__.py  config.py  helpers.py  logging.py
tests/: test_persistence.py  test_utils.py
tests/test_agents/: __init__.py  test_auto_refinement.py  test_code_backend_agent.py  test_code_frontend_agent.py  test_deploy_agent.py  test_design_agent.py  test_maintenance_agent.py  test_requirements_agent.py  test_requirements_assumptions.py  test_tests_agent.py
tests/test_core/: __init__.py  test_coordinator.py  test_event_bus.py  test_message_broker.py  test_metrics.py
(+2 files in other folders)
